fix not smooth issue

--- a/Passport/LoginView.storyboard
+++ b/Passport/LoginView.storyboard
@@ -69,7 +69,7 @@
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JFX-6i-RWe">
                                 <rect key="frame" x="42" y="510" width="291" height="50"/>
-                                <color key="backgroundColor" red="0.14117647058823529" green="0.7803921568627451" blue="0.53725490196078429" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.14117647058823529" green="0.7803921568627451" blue="0.53725490196078429" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="cBL-aE-ZIj"/>
                                 </constraints>
@@ -149,7 +149,7 @@
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LH4-Nh-Gzy">
                                 <rect key="frame" x="42" y="445.5" width="291" height="50"/>
-                                <color key="backgroundColor" red="0.14117647059999999" green="0.78039215689999997" blue="0.53725490200000003" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.14117647059999999" green="0.78039215689999997" blue="0.53725490200000003" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="wa0-bf-THh"/>
                                 </constraints>
@@ -209,7 +209,7 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UG0-tJ-bmi">
                                 <rect key="frame" x="42" y="587" width="291" height="50"/>
-                                <color key="backgroundColor" red="0.14117647059999999" green="0.78039215689999997" blue="0.53725490200000003" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.14117647059999999" green="0.78039215689999997" blue="0.53725490200000003" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="l1c-bh-GeO"/>
                                 </constraints>
